--- a/Windows.Extensions/Vanara.Windows.Extensions.csproj
+++ b/Windows.Extensions/Vanara.Windows.Extensions.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Description>Extension methods and conversions from Vanara P/Invoke types and methods to Windows Forms types and methods.</Description>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <TargetFrameworks>net45;net48;net6.0-windows;netstandard2.0;netcoreapp3.1</TargetFrameworks>
+    <!--<TargetFrameworks>net45;net48;net6.0-windows;netstandard2.0;netcoreapp3.1</TargetFrameworks>-->
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
     <UseWindowsForms>true</UseWindowsForms>
     <AssemblyName>Vanara.Windows.Extensions</AssemblyName>
@@ -27,5 +27,6 @@ Corners
   <ItemGroup>
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" Condition=" $(TargetFramework.StartsWith('netcore')) " />
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" Condition=" $(TargetFramework.StartsWith('netstandard')) " />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.0" Condition=" $(TargetFramework.StartsWith('net8')) " />
   </ItemGroup>
 </Project>
