--- a/PInvoke/WUApi/Vanara.PInvoke.WUApi.csproj
+++ b/PInvoke/WUApi/Vanara.PInvoke.WUApi.csproj
@@ -9,7 +9,13 @@
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;wuapi;windows update</PackageTags>
-    <PackageReleaseNotes />
+    <PackageReleaseNotes>Currently implements:
+
+Interfaces
+IAutomaticUpdates IAutomaticUpdates2 IAutomaticUpdatesResults IAutomaticUpdatesSettings IAutomaticUpdatesSettings2 IAutomaticUpdatesSettings3 ICategory ICategoryCollection IDownloadCompletedCallback IDownloadCompletedCallbackArgs IDownloadJob IDownloadProgress IDownloadProgressChangedCallback IDownloadProgressChangedCallbackArgs IDownloadResult IImageInformation IInstallationAgent IInstallationBehavior IInstallationCompletedCallback IInstallationCompletedCallbackArgs IInstallationJob IInstallationProgress IInstallationProgressChangedCallback IInstallationProgressChangedCallbackArgs IInstallationResult IInvalidProductLicenseException ISearchCompletedCallback ISearchCompletedCallbackArgs ISearchJob ISearchResult IStringCollection ISystemInformation IUpdate IUpdate2 IUpdate3 IUpdate4 IUpdate5 IUpdateCollection IUpdateDownloadContent IUpdateDownloadContent2 IUpdateDownloadContentCollection IUpdateDownloader IUpdateDownloadResult IUpdateException IUpdateExceptionCollection IUpdateHistoryEntry IUpdateHistoryEntry2 IUpdateHistoryEntryCollection IUpdateIdentity IUpdateInstallationResult IUpdateInstaller IUpdateInstaller2 IUpdateInstaller3 IUpdateInstaller4 IUpdateLockdown IUpdateSearcher IUpdateSearcher2 IUpdateSearcher3 IUpdateService IUpdateService2 IUpdateServiceCollection IUpdateServiceManager IUpdateServiceManager2 IUpdateServiceRegistration IUpdateSession IUpdateSession2 IUpdateSession3 IWebProxy IWindowsDriverUpdate IWindowsDriverUpdate2 IWindowsDriverUpdate3 IWindowsDriverUpdate4 IWindowsDriverUpdate5 IWindowsDriverUpdateEntry IWindowsDriverUpdateEntryCollection IWindowsUpdateAgentInfo
+
+</PackageReleaseNotes>
+    <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
