--- a/System/Vanara.SystemServices.csproj
+++ b/System/Vanara.SystemServices.csproj
@@ -23,11 +23,12 @@ BatteryStatus, EdgeTraversalType, EnergySaverStatus, FirewallAction, FirewallAut
     <Reference Include="System.ServiceProcess" Condition=" $(TargetFramework.StartsWith('net4')) " />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' != 'net45' ">
+    <PackageReference Include="System.Drawing.Common" Version="8.0.5" Condition=" $(TargetFramework.StartsWith('net8')) " />
     <PackageReference Include="System.IO.FileSystem.AccessControl" Version="5.0.0" Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore')) Or $(TargetFramework.StartsWith('net5')) " />
-    <PackageReference Include="System.Management" Version="6.0.2" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' " />
-    <PackageReference Include="System.Management" Version="7.0.2" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' " />
-    <PackageReference Include="System.ServiceProcess.ServiceController" Version="6.0.1" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' " />
-    <PackageReference Include="System.ServiceProcess.ServiceController" Version="7.0.1" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' " />
+    <PackageReference Include="System.Management" Version="6.0.2" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' Or '$(TargetFramework)' == 'net5.0' " />
+    <PackageReference Include="System.Management" Version="8.0.0" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' And '$(TargetFramework)' != 'net5.0' " />
+    <PackageReference Include="System.ServiceProcess.ServiceController" Version="6.0.1" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' Or '$(TargetFramework)' == 'net5.0' " />
+    <PackageReference Include="System.ServiceProcess.ServiceController" Version="8.0.0" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' And '$(TargetFramework)' != 'net5.0' " />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PInvoke\AMSI\Vanara.PInvoke.AMSI.csproj" />
