--- a/UnitTests/PInvoke/NTDSApi/NTDSApi.csproj
+++ b/UnitTests/PInvoke/NTDSApi/NTDSApi.csproj
@@ -10,8 +10,8 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <PackageReference Include="System.DirectoryServices" Version="6.0.0" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' " />
-        <PackageReference Include="System.DirectoryServices" Version="7.0.0" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' " />
+        <PackageReference Include="System.DirectoryServices" Version="6.0.1" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' Or '$(TargetFramework)' == 'net5.0' " />
+        <PackageReference Include="System.DirectoryServices" Version="8.0.0" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' And '$(TargetFramework)' != 'net5.0' " />
       </ItemGroup>
     </Otherwise>
   </Choose>
