--- a/VirtualDisk/Vanara.VirtualDisk.csproj
+++ b/VirtualDisk/Vanara.VirtualDisk.csproj
@@ -21,8 +21,8 @@ CompactionMode, DeviceType, Subtype
     <PackageReference Include="System.IO.FileSystem.AccessControl" Version="5.0.0" Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore')) Or $(TargetFramework.StartsWith('net5')) " />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' != 'net45' ">
-    <PackageReference Include="System.Management" Version="6.0.2" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' " />
-    <PackageReference Include="System.Management" Version="7.0.2" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' " />
+    <PackageReference Include="System.Management" Version="6.0.2" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' Or '$(TargetFramework)' == 'net5.0' " />
+    <PackageReference Include="System.Management" Version="8.0.0" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' And '$(TargetFramework)' != 'net5.0' " />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
     <Reference Include="System.Management" />
