WIP on WUApi parts -- NOT COMPLETE

--- a/UnitTests/PInvoke/WUApi/WUApi.csproj
+++ b/UnitTests/PInvoke/WUApi/WUApi.csproj
@@ -3,6 +3,17 @@
     <AssemblyName>UnitTest.PInvoke.WUApi</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\PInvoke\WUApi\Vanara.PInvoke.WUApi.csproj" />
+    <COMReference Include="WUApiLib">
+      <WrapperTool>tlbimp</WrapperTool>
+      <VersionMinor>0</VersionMinor>
+      <VersionMajor>2</VersionMajor>
+      <Guid>b596cc9f-56e5-419e-a622-e01bb457431e</Guid>
+      <Lcid>0</Lcid>
+      <Isolated>false</Isolated>
+      <EmbedInteropTypes>true</EmbedInteropTypes>
+    </COMReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\WindowsUpdate\Vanara.WindowsUpdate.csproj" />
   </ItemGroup>
 </Project>
