--- a/UnitTests/PInvoke/VssApi/VssApi.csproj
+++ b/UnitTests/PInvoke/VssApi/VssApi.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.22000.0</TargetFramework>
     <AssemblyName>UnitTest.PInvoke.VssApi</AssemblyName>
+    <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualBasic">
+    <!--<Reference Include="Microsoft.VisualBasic">
       <HintPath>C:\Program Files\dotnet\packs\Microsoft.WindowsDesktop.App.Ref\6.0.24\ref\net6.0\Microsoft.VisualBasic.dll</HintPath>
     </Reference>
     <Reference Include="System.Drawing">
@@ -12,7 +13,7 @@
     </Reference>
     <Reference Include="WindowsBase">
       <HintPath>C:\Program Files\dotnet\packs\Microsoft.WindowsDesktop.App.Ref\6.0.24\ref\net6.0\WindowsBase.dll</HintPath>
-    </Reference>
+    </Reference>-->
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\PInvoke\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
