Changed VssApi back to net6

--- a/UnitTests/PInvoke/VssApi/VssApi.csproj
+++ b/UnitTests/PInvoke/VssApi/VssApi.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net7.0-windows10.0.22000.0</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <AssemblyName>UnitTest.PInvoke.VssApi</AssemblyName>
     <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
   </PropertyGroup>
