WIP on ShellItemSource

--- a/WinUI.Extensions/Vanara.WinUI.Extensions.csproj
+++ b/WinUI.Extensions/Vanara.WinUI.Extensions.csproj
@@ -23,6 +23,7 @@ SystemFoundationExtensions
   <ItemGroup>
     <ProjectReference Include="..\PInvoke\Gdi32\Vanara.PInvoke.Gdi32.csproj" />
     <ProjectReference Include="..\PInvoke\User32\Vanara.PInvoke.User32.csproj" />
+    <ProjectReference Include="..\Windows.Shell.Common\Vanara.Windows.Shell.Common.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="System.Runtime.WindowsRuntime" Version="4.7.0" />
