Added manifest to ComCtl32 to include v6 of the library and updated ComCtl32v6Context to use updated ACTCTX types

--- a/PInvoke/ComCtl32/Vanara.PInvoke.ComCtl32.csproj
+++ b/PInvoke/ComCtl32/Vanara.PInvoke.ComCtl32.csproj
@@ -22,7 +22,7 @@ Interfaces
 IImageList IImageList2
 
 </PackageReleaseNotes>
-    <ApplicationManifest>Library.manifest</ApplicationManifest>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
