--- a/WindowsUpdate/Vanara.WindowsUpdate.csproj
+++ b/WindowsUpdate/Vanara.WindowsUpdate.csproj
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <ProjectExtensions>
-    <SupportedDlls>WindowsUpdate.dll</SupportedDlls>
+    <!--<SupportedDlls>WindowsUpdate.dll</SupportedDlls>-->
+    <Exclude>true</Exclude>
   </ProjectExtensions>
   <PropertyGroup>
     <Description>PInvoke API (methods, structures and constants) imported from Windows WindowsUpdate.dll.</Description>
