--- a/PInvoke/PowrProf/Vanara.PInvoke.PowrProf.csproj
+++ b/PInvoke/PowrProf/Vanara.PInvoke.PowrProf.csproj
@@ -23,7 +23,8 @@ BATTERY_REPORTING_SCALE DEVICE_NOTIFY_SUBSCRIBE_PARAMETERS GLOBAL_MACHINE_POWER_
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
-    <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
+    <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
+    <ProjectReference Include="..\User32\Vanara.PInvoke.User32.csproj" />
   </ItemGroup>
 </Project>
