Updated project data

--- a/PInvoke/AclUI/Vanara.PInvoke.AclUI.csproj
+++ b/PInvoke/AclUI/Vanara.PInvoke.AclUI.csproj
@@ -16,7 +16,7 @@ Functions
 CreateSecurityPage EditSecurity EditSecurityAdvanced
 
 Structures
-EFFPERM_RESULT_LIST SECURITY_OBJECT SID_INFO SI_ACCESS SI_INHERIT_TYPE SI_OBJECT_INFO
+EFFPERM_RESULT_LIST SECURITY_OBJECT SID_INFO SID_INFO_LIST SI_ACCESS SI_INHERIT_TYPE SI_OBJECT_INFO
 
 Interfaces
 IEffectivePermission IEffectivePermission2 ISecurityInformation ISecurityInformation2 ISecurityInformation3 ISecurityInformation4 ISecurityObjectTypeInfo
