--- a/PInvoke/SpellCheckingApi/Vanara.PInvoke.SpellCheckingApi.csproj
+++ b/PInvoke/SpellCheckingApi/Vanara.PInvoke.SpellCheckingApi.csproj
@@ -6,7 +6,16 @@
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;spell checking</PackageTags>
-    <PackageReleaseNotes/>
+    <PackageReleaseNotes>Currently implements:
+
+Classes
+SpellCheck, SpellCheckerFactory, SpellCheckProvider
+
+Enumerations
+CORRECTIVE_ACTION, WORDLIST_TYPE
+
+</PackageReleaseNotes>
+    <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
