Updated project files

--- a/PInvoke/SpellCheckingApi/Vanara.PInvoke.SpellCheckingApi.csproj
+++ b/PInvoke/SpellCheckingApi/Vanara.PInvoke.SpellCheckingApi.csproj
@@ -9,7 +9,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Classes
-SpellCheck, SpellCheckerFactory, SpellCheckProvider
+SpellCheck, SpellCheckerFactory, SpellCheckerOption, SpellCheckProvider
 
 Enumerations
 CORRECTIVE_ACTION, WORDLIST_TYPE
