--- a/PInvoke/ActiveDS/Vanara.PInvoke.ActiveDS.csproj
+++ b/PInvoke/ActiveDS/Vanara.PInvoke.ActiveDS.csproj
@@ -12,7 +12,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-ADsBuildEnumerator ADsBuildVarArrayInt ADsBuildVarArrayStr ADsEncodeBinaryData ADsEnumerateNext ADsFreeEnumerator ADsGetLastError ADsGetObject ADsOpenObject ADsSetLastError AllocADsMem AllocADsStr BinarySDToSecurityDescriptor ConvertSecurityDescriptorToSecDes FreeADsMem FreeADsStr ReallocADsMem ReallocADsStr SecurityDescriptorToBinarySD
+ADsBuildEnumerator ADsBuildVarArrayInt ADsBuildVarArrayStr ADsEncodeBinaryData ADsEnumerateNext ADsFreeEnumerator ADsGetLastError ADsGetObject ADsOpenObject ADsSetLastError AllocADsMem AllocADsStr BinarySDToSecurityDescriptor FreeADsMem FreeADsStr ReallocADsMem ReallocADsStr SecurityDescriptorToBinarySD
 
 Structures
 ADSVALUE ADS_ATTR_DEF ADS_ATTR_INFO ADS_BACKLINK ADS_CASEIGNORE_LIST ADS_CLASS_DEF ADS_DN_WITH_BINARY ADS_DN_WITH_STRING ADS_EMAIL ADS_FAXNUMBER ADS_HOLD ADS_NETADDRESS ADS_NT_SECURITY_DESCRIPTOR ADS_OBJECT_INFO ADS_OCTET_LIST ADS_OCTET_STRING ADS_PATH ADS_POSTALADDRESS ADS_PROV_SPECIFIC ADS_REPLICAPOINTER ADS_SEARCHPREF_INFO ADS_SEARCH_COLUMN ADS_SEARCH_HANDLE ADS_SORTKEY ADS_TIMESTAMP ADS_TYPEDNAME ADS_VLV
