Updated version to 4.0.5

--- a/Package.targets
+++ b/Package.targets
@@ -1,6 +1,6 @@
-﻿<Project>
+<Project>
   <PropertyGroup Label="VanaraPackage">
-    <Version>4.0.4</Version>
+    <Version>4.0.5</Version>
     <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)Vanara.snk</AssemblyOriginatorKeyFile>
     <Authors>David Hall</Authors>
     <Company>GitHub Community</Company>
