Updated project files.

--- a/PInvoke/WslApi/Vanara.PInvoke.WslApi.csproj
+++ b/PInvoke/WslApi/Vanara.PInvoke.WslApi.csproj
@@ -12,7 +12,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-DllMain WslConfigureDistribution WslGetDistributionConfiguration WslIsDistributionRegistered WslLaunch WslLaunchInteractive WslRegisterDistribution WslUnregisterDistribution
+WslConfigureDistribution WslGetDistributionConfiguration WslIsDistributionRegistered WslLaunch WslLaunchInteractive WslRegisterDistribution WslUnregisterDistribution
 
 </PackageReleaseNotes>
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
