--- a/PInvoke/Graphics/Vanara.PInvoke.Graphics.csproj
+++ b/PInvoke/Graphics/Vanara.PInvoke.Graphics.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <ProjectExtensions>
-    <SupportedDlls>d2d1.dll;dxgi.dll;dwrite.dll;windowscodecs.dll</SupportedDlls>
+    <SupportedDlls>d2d1.dll;dxgi.dll;dxgidebug.dll;dwrite.dll;windowscodecs.dll</SupportedDlls>
   </ProjectExtensions>
   <PropertyGroup>
     <Description>PInvoke API (methods, interfaces, structures and constants) imported from Windows Graphics APIs. Currently supports Windows Imaging Component (WIC), DirectWrite (full), Direct2D (partial), and Direct3D (DXGI only).</Description>
@@ -28,5 +28,8 @@ ID2D1Bitmap ID2D1Bitmap1 ID2D1BitmapBrush ID2D1BitmapBrush1 ID2D1BitmapRenderTar
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Ole\Vanara.PInvoke.Ole.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' != 'net45'">
+    <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.3.2" />
   </ItemGroup>
 </Project>
