--- a/PInvoke/Graphics/Vanara.PInvoke.Graphics.csproj
+++ b/PInvoke/Graphics/Vanara.PInvoke.Graphics.csproj
@@ -32,4 +32,15 @@ ID2D1Bitmap ID2D1Bitmap1 ID2D1BitmapBrush ID2D1BitmapBrush1 ID2D1BitmapRenderTar
   <ItemGroup Condition="'$(TargetFramework)' != 'net45'">
     <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.3.2" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DStorage\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="DStorage\dstorage.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="DStorage\dstoragecore.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
