--- a/PInvoke/DStorage/Vanara.PInvoke.DStorage.csproj
+++ b/PInvoke/DStorage/Vanara.PInvoke.DStorage.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
+    <ProjectReference Include="..\Direct3D12\Vanara.PInvoke.Direct3D12.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
   <ItemGroup>
