--- a/PInvoke/Direct2D/Vanara.PInvoke.Direct2D.csproj
+++ b/PInvoke/Direct2D/Vanara.PInvoke.Direct2D.csproj
@@ -9,10 +9,13 @@
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;Direct2D</PackageTags>
-    <PackageReleaseNotes/>
+    <PackageReleaseNotes />
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
+    <ProjectReference Include="..\DWrite\Vanara.PInvoke.DWrite.csproj" />
+    <ProjectReference Include="..\DXGI\Vanara.PInvoke.DXGI.csproj" />
+    <ProjectReference Include="..\Ole\Vanara.PInvoke.Ole.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
 </Project>
