--- a/PInvoke/D3DCompiler/Vanara.PInvoke.D3DCompiler.csproj
+++ b/PInvoke/D3DCompiler/Vanara.PInvoke.D3DCompiler.csproj
@@ -13,7 +13,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
-    <ProjectReference Include="..\Direct3D11\Vanara.PInvoke.Direct3D11.csproj" />
+    <ProjectReference Include="..\DXGI\Vanara.PInvoke.DXGI.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
 </Project>
