--- a/PInvoke/DStorage/Vanara.PInvoke.DStorage.csproj
+++ b/PInvoke/DStorage/Vanara.PInvoke.DStorage.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Direct3D12\Vanara.PInvoke.Direct3D12.csproj" />
+    <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
   <ItemGroup>
