--- a/PInvoke/Direct3D12/Vanara.PInvoke.Direct3D12.csproj
+++ b/PInvoke/Direct3D12/Vanara.PInvoke.Direct3D12.csproj
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <ProjectExtensions>
-    <SupportedDlls>Direct3D12.dll</SupportedDlls>
+    <SupportedDlls>d3d12.dll</SupportedDlls>
   </ProjectExtensions>
   <PropertyGroup>
-    <Description>PInvoke API (methods, structures and constants) imported from Windows Direct3D12.dll.</Description>
+    <Description>PInvoke API (methods, structures and constants) imported from Windows Direct3D 12.</Description>
     <AssemblyName>Vanara.PInvoke.Direct3D12</AssemblyName>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
     <PackageId>$(AssemblyName)</PackageId>
@@ -13,6 +13,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
+    <ProjectReference Include="..\D3DCompiler\Vanara.PInvoke.D3DCompiler.csproj" />
     <ProjectReference Include="..\Direct3D11\Vanara.PInvoke.Direct3D11.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
