--- a/PInvoke/Graphics/Vanara.PInvoke.Graphics.csproj
+++ b/PInvoke/Graphics/Vanara.PInvoke.Graphics.csproj
@@ -1,39 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <ProjectExtensions>
-    <SupportedDlls>d2d1.dll;dxgi.dll;dxgidebug.dll;dwrite.dll;windowscodecs.dll</SupportedDlls>
+    <SupportedDlls/>
   </ProjectExtensions>
   <PropertyGroup>
-    <Description>PInvoke API (methods, interfaces, structures and constants) imported from Windows Graphics APIs. Currently supports Windows Imaging Component (WIC), DirectWrite (full), Direct2D (partial), and Direct3D (DXGI only).</Description>
+    <Description>PInvoke API (methods, interfaces, structures and constants) imported from DirectX.</Description>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
     <AssemblyName>Vanara.PInvoke.Graphics</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
-    <PackageTags>pinvoke;vanara;net-extensions;interop;DirectX;DirectWrite;DXGI;Direct2D;Windows Imaging Component;WIC;windowscodecs</PackageTags>
+    <PackageTags>pinvoke;vanara;net-extensions;interop;directx</PackageTags>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-    <PackageReleaseNotes>Currently implements:
-
-Functions
-CreateDXGIFactory CreateDXGIFactory1 CreateDXGIFactory2 D2D1ComputeMaximumScaleFactor D2D1ConvertColorSpace D2D1CreateDevice D2D1CreateDeviceContext D2D1CreateFactory D2D1GetGradientMeshInteriorPointsFromCoonsPatch D2D1InvertMatrix D2D1IsMatrixInvertible D2D1MakeRotateMatrix D2D1MakeSkewMatrix D2D1SinCos D2D1Tan D2D1Vec3Length DWriteCreateFactory DXGIDeclareAdapterRemovalSupport DXGIGetDebugInterface1 WICConvertBitmapSource WICCreateBitmapFromSection WICCreateBitmapFromSectionEx WICMapGuidToShortName WICMapSchemaToName WICMapShortNameToGuid
-
-Structures
-D2D1_ARC_SEGMENT D2D1_BEZIER_SEGMENT D2D1_BITMAP_BRUSH_PROPERTIES D2D1_BITMAP_PROPERTIES D2D1_BITMAP_PROPERTIES1 D2D1_BRUSH_PROPERTIES D2D1_CREATION_PROPERTIES D2D1_DRAWING_STATE_DESCRIPTION D2D1_EFFECT_INPUT_DESCRIPTION D2D1_ELLIPSE D2D1_FACTORY_OPTIONS D2D1_GRADIENT_STOP D2D1_HWND_RENDER_TARGET_PROPERTIES D2D1_IMAGE_BRUSH_PROPERTIES D2D1_LAYER_PARAMETERS D2D1_LAYER_PARAMETERS1 D2D1_LINEAR_GRADIENT_BRUSH_PROPERTIES D2D1_MAPPED_RECT D2D1_PIXEL_FORMAT D2D1_PRINT_CONTROL_PROPERTIES D2D1_QUADRATIC_BEZIER_SEGMENT D2D1_RADIAL_GRADIENT_BRUSH_PROPERTIES D2D1_RENDERING_CONTROLS D2D1_RENDER_TARGET_PROPERTIES D2D1_ROUNDED_RECT D2D1_STROKE_STYLE_PROPERTIES D2D1_TRIANGLE D2D_MATRIX_3X2_F D2D_POINT_2F D2D_RECT_F D2D_SIZE_F D2D_SIZE_U D3DCOLORVALUE DWRITE_CLUSTER_METRICS DWRITE_FONT_FEATURE DWRITE_FONT_METRICS DWRITE_GLYPH_METRICS DWRITE_GLYPH_OFFSET DWRITE_GLYPH_RUN DWRITE_GLYPH_RUN DWRITE_GLYPH_RUN_DESCRIPTION DWRITE_HIT_TEST_METRICS DWRITE_INLINE_OBJECT_METRICS DWRITE_LINE_BREAKPOINT DWRITE_LINE_METRICS DWRITE_MATRIX DWRITE_OVERHANG_METRICS DWRITE_SCRIPT_ANALYSIS DWRITE_SHAPING_GLYPH_PROPERTIES DWRITE_SHAPING_TEXT_PROPERTIES DWRITE_STRIKETHROUGH DWRITE_TEXT_METRICS DWRITE_TEXT_RANGE DWRITE_TRIMMING DWRITE_TYPOGRAPHIC_FEATURES DWRITE_UNDERLINE DXGI_ADAPTER_DESC DXGI_ADAPTER_DESC1 DXGI_FRAME_STATISTICS DXGI_GAMMA_CONTROL DXGI_GAMMA_CONTROL_CAPABILITIES DXGI_JPEG_AC_HUFFMAN_TABLE DXGI_JPEG_DC_HUFFMAN_TABLE DXGI_JPEG_QUANTIZATION_TABLE DXGI_MAPPED_RECT DXGI_MODE_DESC DXGI_OUTPUT_DESC DXGI_RATIONAL DXGI_RGB DXGI_SAMPLE_DESC DXGI_SHARED_RESOURCE DXGI_SURFACE_DESC DXGI_SWAP_CHAIN_DESC PWICRect WICBitmapPattern WICBitmapPlane WICBitmapPlaneDescription WICDdsFormatInfo WICDdsParameters WICImageParameters WICJpegFrameHeader WICJpegScanHeader WICMetadataHeader WICMetadataPattern WICRawCapabilitiesInfo WICRawToneCurve WICRawToneCurvePoint WICRect
-
-Interfaces
-ID2D1Bitmap ID2D1Bitmap1 ID2D1BitmapBrush ID2D1BitmapBrush1 ID2D1BitmapRenderTarget ID2D1Brush ID2D1ColorContext ID2D1CommandList ID2D1CommandSink ID2D1DCRenderTarget ID2D1Device ID2D1DeviceContext ID2D1DrawingStateBlock ID2D1Effect ID2D1EllipseGeometry ID2D1Factory ID2D1GdiMetafile ID2D1GdiMetafileSink ID2D1Geometry ID2D1GeometryGroup ID2D1GeometrySink ID2D1GradientStopCollection ID2D1GradientStopCollection1 ID2D1HwndRenderTarget ID2D1Image ID2D1ImageBrush ID2D1Layer ID2D1LinearGradientBrush ID2D1Mesh ID2D1PathGeometry ID2D1PrintControl ID2D1Properties ID2D1RadialGradientBrush ID2D1RectangleGeometry ID2D1RenderTarget ID2D1Resource ID2D1RoundedRectangleGeometry ID2D1SimplifiedGeometrySink ID2D1SolidColorBrush ID2D1StrokeStyle ID2D1TessellationSink ID2D1TransformedGeometry IDWriteBitmapRenderTarget IDWriteFactory IDWriteFont IDWriteFontCollection IDWriteFontCollectionLoader IDWriteFontFace IDWriteFontFamily IDWriteFontFile IDWriteFontFileEnumerator IDWriteFontFileLoader IDWriteFontFileStream IDWriteFontList IDWriteGdiInterop IDWriteGlyphRunAnalysis IDWriteInlineObject IDWriteLocalFontFileLoader IDWriteLocalizedStrings IDWriteNumberSubstitution IDWritePixelSnapping IDWriteRenderingParams IDWriteTextAnalysisSink IDWriteTextAnalysisSource IDWriteTextAnalyzer IDWriteTextFormat IDWriteTextLayout IDWriteTextRenderer IDWriteTypography IDXGIAdapter IDXGIAdapter1 IDXGIDevice IDXGIDeviceSubObject IDXGIFactory IDXGIFactory1 IDXGIObject IDXGIOutput IDXGISurface IDXGISwapChain IWICBitmap IWICBitmapClipper IWICBitmapCodecInfo IWICBitmapCodecProgressNotification IWICBitmapDecoder IWICBitmapDecoderInfo IWICBitmapEncoder IWICBitmapEncoderInfo IWICBitmapFlipRotator IWICBitmapFrameDecode IWICBitmapFrameEncode IWICBitmapLock IWICBitmapScaler IWICBitmapSource IWICBitmapSourceTransform IWICColorContext IWICColorTransform IWICComponentFactory IWICComponentInfo IWICDdsDecoder IWICDdsEncoder IWICDdsFrameDecode IWICDevelopRaw IWICDevelopRawNotificationCallback IWICEnumMetadataItem IWICFastMetadataEncoder IWICFormatConverter IWICFormatConverterInfo IWICImageEncoder IWICImagingFactory IWICImagingFactory2 IWICJpegFrameDecode IWICJpegFrameEncode IWICMetadataBlockReader IWICMetadataBlockWriter IWICMetadataHandlerInfo IWICMetadataQueryReader IWICMetadataQueryWriter IWICMetadataReader IWICMetadataReaderInfo IWICMetadataWriter IWICMetadataWriterInfo IWICPalette IWICPersistStream IWICPixelFormatInfo IWICPixelFormatInfo2 IWICPlanarBitmapFrameEncode IWICPlanarBitmapSourceTransform IWICPlanarFormatConverter IWICProgressCallback IWICProgressiveLevelControl IWICStream IWICStreamProvider
-
-</PackageReleaseNotes>
+    <PackageReleaseNotes/>
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
-  <ItemGroup>
-    <Compile Remove="Direct2D\**" />
-    <EmbeddedResource Remove="Direct2D\**" />
-    <None Remove="Direct2D\**" />
-  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\D3DCompiler\Vanara.PInvoke.D3DCompiler.csproj" />
     <ProjectReference Include="..\Direct2D\Vanara.PInvoke.Direct2D.csproj" />
     <ProjectReference Include="..\Direct3D11\Vanara.PInvoke.Direct3D11.csproj" />
+    <ProjectReference Include="..\Direct3D12\Vanara.PInvoke.Direct3D12.csproj" />
     <ProjectReference Include="..\DXCore\Vanara.PInvoke.DXCore.csproj" />
     <ProjectReference Include="..\DXGI\Vanara.PInvoke.DXGI.csproj" />
     <ProjectReference Include="..\DStorage\Vanara.PInvoke.DStorage.csproj" />
